build/errors/error8.txt
adam@dig:~/openhip-openhip-7ca0bd5421a5$ make
make  all-recursive
make[1]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Making all in src
make[2]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
make[3]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_cache.o -MD -MP -MF .deps/hip-hip_cache.Tpo -c -o hip-hip_cache.o `test -f 'protocol/hip_cache.c' || echo './'`protocol/hip_cache.c
mv -f .deps/hip-hip_cache.Tpo .deps/hip-hip_cache.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_dht.o -MD -MP -MF .deps/hip-hip_dht.Tpo -c -o hip-hip_dht.o `test -f 'protocol/hip_dht.c' || echo './'`protocol/hip_dht.c
protocol/hip_dht.c: In function ‘hip_xmlrpc_parse_response’:
protocol/hip_dht.c:1332:18: error: storage size of ‘ctx’ isn’t known
   EVP_ENCODE_CTX ctx;
                  ^~~
protocol/hip_dht.c:1332:18: error: unused variable ‘ctx’ [-Werror=unused-variable]
cc1: all warnings being treated as errors
Makefile:823: recipe for target 'hip-hip_dht.o' failed
make[3]: *** [hip-hip_dht.o] Error 1
make[3]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:1151: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:422: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Makefile:357: recipe for target 'all' failed
make: *** [all] Error 2
